[gd_scene load_steps=5 format=3 uid="uid://m02mixgtc48i"]

[ext_resource type="PackedScene" uid="uid://cq0st15no33wp" path="res://Components/Entities/Player.tscn" id="1_x0ksp"]
[ext_resource type="Script" uid="uid://dmeqx8maga4oo" path="res://Scripts/Scenes/TestGame.gd" id="1_xw4yt"]
[ext_resource type="Script" uid="uid://bj8em8c3wqlc6" path="res://Scripts/Game.gd" id="2_8kjg6"]
[ext_resource type="PackedScene" uid="uid://ootpfvisx2mm" path="res://Components/Entities/WaveManager.tscn" id="3_xw4yt"]

[node name="TestGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xw4yt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Container" type="Control" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
script = ExtResource("2_8kjg6")

[node name="Player" parent="MarginContainer/VBoxContainer/GridContainer/Container" groups=["player"] instance=ExtResource("1_x0ksp")]
position = Vector2(250, 250)

[node name="WaveManager" parent="MarginContainer/VBoxContainer/GridContainer/Container" node_paths=PackedStringArray("player") instance=ExtResource("3_xw4yt")]
player = NodePath("../Player")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShopPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 3

[node name="DamageShop" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 90
columns = 2

[node name="TitleText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Damage"

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="DamageButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="DamageShop2" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 75
columns = 2

[node name="TitleText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Damage"

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="DamageButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="DamageShop3" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 75
columns = 2

[node name="TitleText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Damage"

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="DamageButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop3/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="DamageShop4" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 75
columns = 2

[node name="TitleText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Damage"

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="DamageButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/ShopPanel/MarginContainer/ScrollContainer/GridContainer/DamageShop4/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="InfoPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/InfoPanel/HBoxContainer"]
layout_mode = 2
text = "Health : 000/000"

[node name="WaveLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer/VBoxContainer/InfoPanel/HBoxContainer"]
layout_mode = 2
text = "Curr. Wave : 0"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainerOne" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="DamageLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainerOne"]
layout_mode = 2
text = "Damage : 000"

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainerOne"]
layout_mode = 2
text = "Health : 000"

[node name="RadiusLAbel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainerOne"]
layout_mode = 2
text = "Radius : 000"

[node name="CadenceLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainerOne"]
layout_mode = 2
text = "Cadence : 000"

[node name="HBoxContainerTwo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="BulletLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainerTwo"]
layout_mode = 2
text = "Bullet : 000"

[node name="RegenerationLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainerTwo"]
layout_mode = 2
text = "Regeneration : 000"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "x0.0"
